new ListRCConfiguration api
