# openapi/index.yaml
@@ -10,12 +10,12 @@ info:
   description: >
     # Warning
 
-    **This is an experimental API that is (most probably) going to change as we evolve the IO platform.**
+    **This is an experimental API that is (most probably) going to change as we
+    evolve the IO platform.**
 
     # Introduction
 
     This is the documentation of the IO API for App.
-
 host: api.cd.italia.it
 basePath: /service-messages/api/v1
 schemes:
@@ -95,12 +95,40 @@ paths:
         - application/json
       produces:
         - application/json
+    get:
+      operationId: listRCConfiguration
+      summary: Get all the remote-content configurations associated to the userId
+      description: >-
+        Get all the remote-content configurations associated to the userId
+        retrived from the header
+      responses:
+        '200':
+          description: Return the configurations
+          schema:
+            $ref: '#/definitions/RCConfigurationListResponse'
+        '400':
+          description: Bad request
+          schema:
+            $ref: '#/definitions/ProblemJson'
+        '403':
+          description: Request not authorized.
+        '404':
+          description: Resource not found.
+        '500':
+          description: There was an error trying to get the configurations.
+          schema:
+            $ref: '#/definitions/ProblemJson'
+      consumes:
+        - application/json
+      produces:
+        - application/json
   /remote-contents/configurations/{configurationId}:
     get:
       operationId: getRCConfiguration
       summary: Get the remote-content configuration identified by the configurationId
       description: >-
-        Get the remote-content configuration using the provided configurationId passed as path param
+        Get the remote-content configuration using the provided configurationId
+        passed as path param
       parameters:
         - in: path
           name: configurationId
@@ -134,7 +162,8 @@ paths:
       operationId: updateRCConfiguration
       summary: Update an existing remote-content configuration
       description: >-
-        Update an existing remote-content configuration using the provided payload
+        Update an existing remote-content configuration using the provided
+        payload
       parameters:
         - in: body
           name: body
@@ -297,6 +326,13 @@ definitions:
       - ALWAYS
       - ONCE
       - NEVER
+  RCConfigurationListResponse:
+    type: object
+    properties:
+      rCConfigList:
+        type: array
+        items:
+          $ref: '#/definitions/RCConfigurationResponse'
   RCConfigurationResponse:
     allOf:
       - $ref: '#/definitions/RCConfigurationPublic'
@@ -350,7 +386,8 @@ definitions:
         type: integer
         format: int32
         description: >-
-          The HTTP status code generated by the origin server for this occurrence of the problem.
+          The HTTP status code generated by the origin server for this
+          occurrence of the problem.
         minimum: 100
         maximum: 600
         exclusiveMaximum: true
@@ -365,7 +402,8 @@ definitions:
         type: string
         format: uri
         description: >-
-          An absolute URI that identifies the specific occurrence of the problem.
+          An absolute URI that identifies the specific occurrence of the
+          problem.
 
           It may or may not yield further information if dereferenced.
   FiscalCode:
